
[package]
name = "Client002"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hostname="0.3.1"
zmq="0.10.0"
get_if_addrs="0.5.3"
rmp-serde = "0.15"
serde = { version = "1", features = ["derive"] }
